--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+#spring.jpa.properties.hibernate.format_sql=true
 #h2 Configuration
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
