--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,21 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+
 #h2 Configuration
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
+
+# Email Configuration (Gmail)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=krshnaprasdedextech@gmail.com
+spring.mail.password=dwsr rkkh zfov wcel
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB  
+spring.servlet.multipart.max-request-size=10MB
